Pedro: Explicando pq fizemos sem PWM

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -15,6 +15,7 @@
 \usepackage{fancyhdr}
 \usepackage{listing}
 \usepackage{gensymb}
+\usepackage{caption}
 
 %\renewcommand*{\refname}{Referências Bibliográficas}
 
