--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,3 +1,9 @@
+@manual{S3F80KB,
+	organization = {Samsung Electronics},
+	title = {{S3F80KB Microcontroller for IR Remote Controller}},
+	year = {2008}
+}
+
 @misc{nielsen04,
 	note = {\url{http://www.nngroup.com/articles/remote-control-anarchy/}},
 	title = {Remote Control Anarchy},
