app layout and pwm in presentation

--- a/tech_report/presentation/present.tex
+++ b/tech_report/presentation/present.tex
@@ -90,8 +90,14 @@ Professores: Jeferson Leite e Adalbery Castro\\
 \end{figure}
 \end{frame}
 
-\section{Voz}
-\subsection{Voz}
+\begin{frame}{Cliente Android}
+\begin{figure}
+	\includegraphics[width=.5\textwidth]{Figures/app}
+\end{figure}
+\end{frame}
+
+\section{Teoria}
+\subsection{Teoria}
 \begin{frame}{Reconhecimento \textit{vs.} Síntese}
 \begin{figure}
 	\includegraphics[width=\textwidth]{Figures/asr_tts}
@@ -107,6 +113,12 @@ Professores: Jeferson Leite e Adalbery Castro\\
 \begin{frame}{ASR: Reconhecimento Automático de Voz}
 \begin{figure}
 	\includegraphics[width=\textwidth]{Figures/asr_sch}
+\end{figure}
+\end{frame}
+
+\begin{frame}{PWM: Modulação por Largura de Pulso}
+\begin{figure}
+	\includegraphics[width=.95\textwidth]{Figures/pwm}
 \end{figure}
 \end{frame}
 
@@ -145,7 +157,13 @@ Professores: Jeferson Leite e Adalbery Castro\\
 \end{frame}
 
 \section{VLW!}
-\begin{frame}{Vlw Flw!}
+\begin{frame}{Obrigado!}
+\centering
+\Huge
+Perguntas?
+\begin{figure}
+	\includegraphics[width=.30\textwidth]{Figures/question}
+\end{figure}
 \end{frame}
 \end{document}
 %%% EOF %%%
