--- a/tech_report/presentation/present.tex
+++ b/tech_report/presentation/present.tex
@@ -81,7 +81,7 @@ Professores: Jeferson Leite e Adalbery Castro\\
 \end{figure}
 \vspace{-.6cm}
 }
-\date{\small{25 de junho de 2015}}
+\date{\small{30 de junho de 2015}}
 
 \begin{document}
 \begin{frame}[plain]
@@ -249,6 +249,10 @@ televisão	t e l e v i z a~ w~
 	\begin{itemize}
 		\item DTO: \textit{Device Tree Overlay} \smallskip
 		\item Arduino $\checkmark$ \medskip
+	\end{itemize}
+	\item Banco de Dados MySQL em C
+	\begin{itemize}
+		\item \texttt{libmysqlclient-dev} $\checkmark$ \medskip
 	\end{itemize}
 \end{itemize}
 \end{frame}
